--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
+    "@vercel/speed-insights": "^1.1.0",
     "framer-motion": "^11.12.0",
     "maath": "^0.10.8",
     "react": "^18.3.1",
